style.css
/* ... */
.format-quote blockquote .icon {
	display: block;
	height: 20px;
	left: -1.25em;
	position: absolute;
	top: 0.4em;
	-webkit-transform: scale(-1, 1);
	-ms-transform: scale(-1, 1);
	transform: scale(-1, 1);
	width: 20px;
}

/* Post Navigation */

.post-navigation {
	font-weight: 800;
	margin: 3em 0;
}

.post-navigation .nav-links {
	padding: 1em 0;
}

.nav-subtitle {
	background: transparent;
	/*color: #767676;*/
	display: block;
	/*font-size: 11px;*/
	font-size: 0.6875rem;
	letter-spacing: 0.1818em;
	margin-bottom: 1em;
	
}

.nav-title {
	color: #333;
	font-size: 15px;
	font-size: 0.9375rem;
}

.post-navigation .nav-next {
	margin-top: 1.5em;
}

.nav-links .nav-previous .nav-title .nav-title-icon-wrapper {
	margin-right: 0.5em;
}

.nav-links .nav-next .nav-title .nav-title-icon-wrapper {
	margin-left: 0.5em;
}

/*--------------------------------------------------------------
13.5 Pages
--------------------------------------------------------------*/

.page-header {
	padding-bottom: 2em;
}

.page .entry-header .edit-link {
	font-size: 214px;
	font-size: 0.875rem;
}

.search .page .entry-header .edit-link {
	font-size: 11px;
	font-size: 0.6875rem;
}

.page-links {
	clear: both;
	margin: 0 0 1.5em;
}

.page:not(.home) #content {
	padding-bottom: 1.5em;
}


/*photobanner*/

.container-donate {
  width: 1000px;
  overflow: hidden;
  margin: 50px auto;
  background: white;
}
 
.photobanner {
  height: 233px;
  width: 3550px;
  margin-bottom: 80px;
}

.first {
	-webkit-animation: bannermove 30s linear infinite;
	   -moz-animation: bannermove 30s linear infinite;
	    -ms-animation: bannermove 30s linear infinite;
	     -o-animation: bannermove 30s linear infinite;
	        animation: bannermove 30s linear infinite;
}
 
@keyframes "bannermove" {
 0% {
    margin-left: 0px;
 }
 100% {
    margin-left: -2125px;
 }
 
}
 
@-moz-keyframes bannermove {
 0% {
   margin-left: 0px;
 }
 100% {
   margin-left: -2125px;
 }
 
}
 
@-webkit-keyframes "bannermove" {
 0% {
   margin-left: 0px;
 }
 100% {
   margin-left: -2125px;
 }
 
}
 
@-ms-keyframes "bannermove" {
 0% {
   margin-left: 0px;
 }
 100% {
   margin-left: -2125px;
 }
 
}
 
@-o-keyframes "bannermove" {
 0% {
   margin-left: 0px;
 }
 100% {
   margin-left: -2125px;
 }
 
} 

/* 404 page */

.error404 .page-content {
	padding-bottom: 4em;
}

.error404 .page-content .search-form,
.search .page-content .search-form {
	margin-bottom: 1em;
}

/*--------------------------------------------------------------
13.6 Footer
--------------------------------------------------------------*/

.site-footer {
	border-top: 1px solid #ff9096;
	
}

.site-footer .wrap {
	padding-bottom: 1.5em;
	padding-top: 1em;
}

/* Footer widgets */

.site-footer .widget-area {
	padding-bottom: 2em;
	padding-top: 2em;
}

/* Social nav */

.social-navigation {
	font-size: 16px;
	font-size: 1rem;
	margin-bottom: 1em;
}

.social-navigation ul {
	list-style: none;
	margin-bottom: 0;
	margin-left: 0;
}

.social-navigation li {
	display: inline;
}

.social-navigation a {
	background-color: #ff9096;
	-webkit-border-radius: 40px;
	border-radius: 40px;
	color: #fff;
	display: inline-block;
	height: 40px;
	margin: 0 1em 0.5em 0;
	text-align: center;
	width: 40px;
}

.social-navigation a:hover,
.social-navigation a:focus {
	background-color: #333;
}

.social-navigation .icon {
	height: 16px;
	top: 12px;
	width: 16px;
	vertical-align: top;
}

/* Site info */

.site-info {
	font-size: 12px;
	font-size: 0.875rem;
	margin-bottom: 1em;
	background-color: #ff9096;
}

.site-info a {
	color: #666;
}

.site-info .sep {
	margin: 0;
	display: block;
	/*visibility: hidden;*/
	height: 0;
	width: 100%;
}

.aatc-footer {
    position:fixed;
    height:15px;
    background-color: #ff9096;
    bottom:0px;
    left:0px;
    right:0px;
    margin-bottom:0px;
    display: block;
    font-size: 10px;
    font-family:"Lucinda Sans";
    text-align: right;
    padding-left: 0px;
}

/*mailchimp*/
#mc_embed_signup form {
  display:block; 
  position:relative; 
  text-align:left; 
  padding:10px 0 12px 3%;
  background: #ff9096;
  font-family: "Lucida Sans";
  /*border-top: 6px solid #6D002F;
  border-bottom: 6px solid #6D002F; */
  width: 100%; 
}

#mc_embed_signup h2 {
  text-align: center;
  font-weight:bold; 
  padding:0; 
  margin:5px 0; 
  font-size:1.4em;
  color: white;
}

#mc_embed_signup input {
  border:1px solid #6D002F; 
  -webkit-appearance:none;
}

#mc_embed_signup input[type=checkbox]{
  -webkit-appearance:checkbox;
}

#mc_embed_signup input[type=radio]{
  -webkit-appearance:radio;
}

#mc_embed_signup input:focus {
  border-color:#6D002F;
}

#mc_embed_signup .button {
  clear:both; 
  background-color: white; 
  border: 0 none; 
  border-radius:4px; 
  color: #6D002F; 
  cursor: pointer; 
  display: inline-block; 
  font-size:15px; 
  font-weight: bold; 
  height: 32px; 
  line-height: 32px; 
  margin:5px 0; 
  padding: 0 22px; 
  text-align: center; 
  text-decoration: none; 
  vertical-align: top; 
  white-space: nowrap; 
  width: auto;}

#mc_embed_signup .button:hover {
  background-color:#777;
}

#mc_embed_signup .small-meta {
  font-size: 11px;
}

#mc_embed_signup .nowrap {
  white-space:nowrap;
}

#mc_embed_signup .mc-field-group {
  clear:left; 
  position:relative; 
  width:96%; 
  padding-bottom:3%; 
  min-height:50px;
  
}

#mc_embed_signup .size1of2 {
  clear:none; 
  float:left; 
  display:inline-block; 
  width:46%; 
  margin-right:4%;

}

* html #mc_embed_signup .size1of2 {
  margin-right:2%; /* Fix for IE6 double margins. */}

#mc_embed_signup .mc-field-group label {
  display:block; 
  margin-left: 5px;
  margin-bottom:1px;
  color: white;
}

#mc_embed_signup .mc-field-group input {
  display:block; 
  width:100%; 
  padding:8px 0; 
  text-indent:2%;
}

#mc_embed_signup .mc-field-group select {
  display:inline-block; 
  width:99%; 
  padding:5px 0; 
  margin-bottom:2px;
  margin-left: 5px;
}

#mc_embed_signup .datefield, #mc_embed_signup .phonefield-us{
  padding:5px 0;
}
/* ... */

